# app/config/routes.php
@@ -25,6 +25,8 @@ return function (Slim $app) {
 	$app->get('/api/Users/getAllUsers', [API::class, 'getAllUsers']);
 	$app->post("/api/Users/createUser", [API::class, 'createUser']);
 	$app->put("/api/Users/changeTempPassword", [API::class, 'changeTempPassword']);
+	$app->put("/api/Users/banUser", [API::class, 'banUser']);
+	$app->put("/api/Users/revokeUserAccess", [API::class, 'revokeUserAccess']);
 	#endregion
 
 	#region Admins
