# public/swagger/openapi.json
@@ -505,6 +505,74 @@
                 ]
             }
         },
+        "/api/Users/banUser/{worker_id}": {
+            "delete": {
+                "tags": [
+                    "Users"
+                ],
+                "description": "Endpoint for admin to ban user account",
+                "operationId": "banUser",
+                "parameters": [
+                    {
+                        "name": "worker_id",
+                        "in": "path",
+                        "description": "ID of user to ban",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/Users/revokeUserAccess/{worker_id}": {
+            "put": {
+                "tags": [
+                    "Users"
+                ],
+                "description": "Endpoint for admin to revoke ban for banned users",
+                "operationId": "revokeUserAccess",
+                "parameters": [
+                    {
+                        "name": "worker_id",
+                        "in": "path",
+                        "description": "ID of user to revoke ban",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/Companies/addCompany": {
             "post": {
                 "tags": [
